# Gestion_Locative

./: .gitignore  README.md  pyproject.toml
gestion_locative/: __init__.py  app.py  cli.py
gestion_locative/templates/: base.html  index.html  parametres.html  statistiques.html
gestion_locative/templates/biens/: detail.html  formulaire.html  liste.html
gestion_locative/templates/locataires/: detail.html  formulaire.html  liste.html
gestion_locative/templates/paiements/: formulaire.html  liste.html
gestion_locative/templates/quittances/: liste.html  quittance.html
